--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@
   --font-buford: "buford";
   --font-poppins: "poppins";
   --breakpoint-mobile: 640px;
-  --breakpoint-tablet: 1024px;
+  --breakpoint-midpoint: 1000px;
+  --breakpoint-tablet: 1240px;
 }
 
 html {
