--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@
 
   --font-buford: "buford";
   --font-poppins: "poppins";
-  
+
   --breakpoint-mobile: 640px;
   --breakpoint-midpoint: 1000px;
   --breakpoint-tablet: 1240px;
@@ -69,4 +69,8 @@ section.master-section {
 
 .inputStyle {
   @apply w-60 rounded-sm border px-2 py-1;
+}
+
+.serviceManagementButton {
+  @apply flex aspect-square w-7 cursor-pointer items-center justify-center rounded-full border;
 }
