--- a/src/index.css
+++ b/src/index.css
@@ -84,7 +84,7 @@ section.master-section {
 }
 
 .serviceManagementButton {
-  @apply flex aspect-square w-7 cursor-pointer items-center justify-center rounded-full border;
+  @apply relative flex aspect-square w-7 cursor-pointer items-center justify-center rounded-full border;
 }
 
 label {
