Booking info slowly added

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./calendar.css";
 
 @font-face {
   font-family: "buford";
@@ -91,7 +92,9 @@ label {
   @apply relative has-[input[type="checkbox"]]:cursor-cell has-[input[type="checkbox"]]:pl-8;
 }
 
-.serviceManagementInput {
+input[type="text"],
+input[type="number"],
+input[type="file"] {
   @apply w-full rounded-xl border px-2 py-1 text-lg;
 }
 
@@ -130,4 +133,8 @@ label:hover input[type="checkbox"] ~ .checkmark {
 
 label input[type="checkbox"]:checked ~ .checkmark::after {
   opacity: 1;
+}
+
+.bookingButton {
+  @apply rounded-xl border px-2 py-1;
 }
