--- a/src/index.css
+++ b/src/index.css
@@ -36,13 +36,13 @@
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button,
 input[type="number"] {
+  -moz-appearance: textfield !important;
   -webkit-appearance: none;
   margin: 0;
-  -moz-appearance: textfield !important;
 }
 
-button {
-  cursor: pointer;
+button:not(.cursor-not-allowed) {
+  @apply cursor-pointer;
 }
 
 html {
@@ -98,6 +98,7 @@ label {
 
 input[type="text"],
 input[type="number"],
+input[type="password"],
 input[type="file"] {
   @apply w-full rounded-xl border px-2 py-1 text-lg;
 }
