Booking time removing after book and option to change it on admin panel

--- a/src/index.css
+++ b/src/index.css
@@ -141,5 +141,5 @@ label input[type="checkbox"]:checked ~ .checkmark::after {
 }
 
 .bookingButton {
-  @apply rounded-xl border px-2 py-1 duration-200 hover:bg-gray-200;
+  @apply grid place-items-center rounded-xl border px-2 py-1 duration-200 hover:bg-gray-200;
 }
