--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,17 @@
   --breakpoint-mobile: 640px;
   --breakpoint-midpoint: 1000px;
   --breakpoint-tablet: 1240px;
+  --animate-image: image 3s ease-in-out infinite;
+
+  @keyframes image {
+    0%,
+    100% {
+      opacity: 0.8;
+    }
+    50% {
+      opacity: 0.4;
+    }
+  }
 }
 
 input[type="number"]::-webkit-outer-spin-button,
